--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
@@ -38,7 +38,7 @@
   <br /> 
   <hr width="998" style="content:open-quote" /> 
 	<p align="center" style="text-indent: 6.01in"><a name="_GoBack"></a><font size="6" face="Calibri, serif" style="font-size: 22pt">
-	<strong>PROFORM INVOICE</strong></font></p> 
+	<strong>PROFORMA INVOICE</strong></font></p> 
 	<p align="center"> </p> 
 	<p align="justify" style="text-indent: 2.01in"><font size="6" face="Calibri, serif" style="font-size: 22pt">
 		<b>
@@ -57,17 +57,25 @@
 			<p class="western" style="text-indent: 2.01in"><font size="2" face="Calibri, serif" style="font-size: 10pt"><font size="3" style="font-size: 12pt">
 				<b>Tel: ${ctx.customer.defaultPaymentAddress.phone1}</b></font></font></p> 
 			<p class="western" style="text-indent: 2.01in"><font size="2" face="Calibri, serif" style="font-size: 10pt"><font size="3" style="font-size: 12pt">
-			<b>VAT NO.:${ctx.append.taxNo}</b></font></font></p> 
+			<b>VAT NO.:${ctx.customer.vatNo}</b></font></font></p> 
 			<p class="western" style="text-indent: 2.01in"><br /> </p> 
-			<p> ${ctx.append.taxInfo}</p>
+			 
+			<p class="western" align="left" style="text-indent: 2.01in"><font size="2" face="Arial, serif" style="font-size: 10pt"><b>V.A.T
+			Transferred article 138 Council Directive 2006/112/EC </b></font>
+			</p>
+			<p class="western" align="left" style="text-indent: 2.01in"><font size="2" face="Arial, serif" style="font-size: 10pt"><b>Neele-Vat
+			Warehousing BV, Bierbrouwerstraat 2, 3194 AP Hoogvliet Rotterdam, The
+			Netherlands, NL804421390B02 acting as limited fiscal </b></font></p>
+			<p class="western" align="left" style="text-indent: 2.01in"><font size="2" face="Arial, serif" style="font-size: 10pt"><b>representative:
+			ACERCHEM UK LTD.</b></font></p>
+			
 			<p class="western" style="text-indent: 2.01in"><br /> </p> 
 			<p class="western" style="text-indent: 2.01in"><font size="2" face="Calibri, serif" style="font-size: 10pt"><font size="3" style="font-size: 12pt">
 				<b>SHIP FROM: ${ctx.order.store} SHIP TO: ${ctx.order.deliveryAddress.formattedAddress}</b></font></font></p> 
 				
 			<p class="western" style="text-indent: 2.01in"><font size="2" face="Calibri, serif" style="font-size: 10pt"><font size="3" style="font-size: 12pt">
-			<b>Terms: ${ctx.append.paymentTerms} Currency: ${ctx.currency}</b></font></font></p> 
-			<p class="western" align="left" style="text-indent: 2.01in"><font size="2" face="Arial, serif" style="font-size: 10pt">
-			<b>ACERCHEM UK LTD .VAT No.: ${ctx.append.acerChemTaxNo} ACERCHEM UK LTD. Company No.:${ctx.append.acerChemCompanyNo}</b></font></p> 
+			<b>Terms: ${ctx.paymentTerms} Currency: ${ctx.currency}</b></font></font></p> 
+			
   <center> 
   #if ($ctx.order.entries.size() > 0)
 	   <table width="594" cellpadding="7" cellspacing="0"> 
@@ -89,7 +97,7 @@
 		 #foreach( $entry in ${ctx.order.entries} )
 			 <tr> 
 			  <td width="142" height="29" style="border: 1px solid #00000a; padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0.08in"> <p class="western" align="center"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
-				<b>${entry.entryNumber}</b></font></p> </td> 
+				<b>N/M</b></font></p> </td> 
 			  <td width="164" style="border: 1px solid #00000a; padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0.08in"> <p class="western"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
 				<b>${entry.product.name}</b></font></p> </td> 
 			  <td width="49" style="border: 1px solid #00000a; padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0.08in"> <p class="western" align="center"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
@@ -100,15 +108,17 @@
 				<b>${entry.totalPrice.formattedValue}</b></font></p> </td> 
 			 </tr> 
 		 #end
-			 <tr> 
-			  <td colspan="5" width="578" height="25" style="border: 1px solid #00000a; padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0.08in"> <p class="western" align="left"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
-			  <b>Packing: ${ctx.append.totalData.packingWeight}KG/DRUM, total:${ctx.append.totalData.packingCount} PACKAGES</b></font></p> 
-			  <p class="western" align="left"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
-			  <b>Net weight:${ctx.append.totalData.netWeight}kg</b></font></p> 
-			  <p class="western" align="left"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
-			  <b>Gross weight:${ctx.append.totalData.grossWeight}kgs</b></font></p> 
-			  <p class="western" align="left"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
-			  <b>SHIPPING MARKS:${ctx.append.totalData.shippingMarks}</b></font></p> <p class="western" align="left"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt"><b>PO NO.: ${ctx.append.totalData.poNo}</b></font></p> </td> 
+			<tr> 
+			  <td colspan="5" width="578" height="25" style=" border-bottom: 1px solid #000000; border-left: none; border-right: none;
+			  padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0.08in">
+			  <p class="western" align="right"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
+			  <b>Subtotal ${ctx.order.subTotal.formattedValue}</b></font></p> 
+			  <p class="western" align="right"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
+			  <b>No VAT 0%</b></font></p> 
+			  <p class="western" align="right"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt">
+			  <b>Total ${ctx.order.totalPrice.formattedValue}</b></font></p> 
+			 
+			  </td> 
 			 </tr> 
 			
 		</tbody>
@@ -220,7 +230,7 @@
   <p class="western"><br /> </p> 
   <p class="western"><br /> </p> 
   <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="3" face="Calibri, serif" style="font-size: 10pt"><b>Packing: ${ctx.append.totalData.packingWeight}KG/DRUM, total:${ctx.append.totalData.packingCount} PACKAGES</b></font></p> 
-  <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="3" face="Calibri, serif" style="font-size: 10pt"><b>Net weight:${ctx.append.totalData.netWeight}kg</b></font></p> 
+  <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="3" face="Calibri, serif" style="font-size: 10pt"><b>Net weight:${ctx.append.totalData.netWeight}kgs</b></font></p> 
   <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt"><b>Gross weight:${ctx.append.totalData.grossWeight}kgs</b></font></p> 
   <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt"><b>SHIPPING MARKS: ${ctx.append.totalData.shippingMarks}</b></font></p> 
   <p class="western" align="left" style="text-indent: 2.01in"><font color="#000000" size="2" face="Calibri, serif" style="font-size: 10pt"><b>PO NO.: ${ctx.append.totalData.poNo}</b></font></p>  
