--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -33,6 +33,7 @@ input[type='text'],input[type='number'], input[type='password'] ,input[type='sub
 	color: #999;
 	border:1px solid #ddd;
 	cursor:pointer;
+	font-weight: normal;
 }
 
 input[type='submit']{
@@ -190,8 +191,8 @@ button{
 .maxtop_rig a.maxicon-search , .searchlist .btn-submit{background-position: -10px -227px;}
 .maxtop_rig a.maxicon-cart{background-position: -10px -283px;position: relative;}
 .maxtop_rig a.maxicon-cart em{position: absolute;font-size: 12px;width: 18px;height: 18px;line-height: 18px;text-align: center;border-radius: 50%;right: -5px;background: #096735;color: #fff;}
-.maxtop_rig .userintro{position: absolute; left:0; top:5px; color: #999; font-size: 14px; width: 140%; font-size: 0; }
-.maxtop_rig .userintro button{color: #096735; display: inline; border:none; background: transparent;  font-size: 12px; }
+.maxtop_rig .userintro{position: absolute; left:0; top:30px;  color: #999; font-size: 14px; width: 140%; font-size: 0;  line-height: 0 }
+.maxtop_rig .userintro button{color: #096735; display: inline; border:none; background: transparent;  font-size: 12px; line-height: 1.5em;}
 .maxtop_rig .userintro button:after{content:''; display: none; position: absolute; bottom:-2px; right: 0; width: 20px; border-top:1px solid #096735; }
 .maxtop_rig .bansearch{position: absolute; top:0; right: 0; background:#eee; width: 200px; }
 .maxtop_rig .bansearch .form-control{height: 30px; line-height: 30px; background: transparent; border:none; box-shadow: none; font-size: 12px; }
@@ -347,6 +348,9 @@ ul.share-buttons .sr-only{
 	display: none;
 }
 
+.col-md-6 #loginForm{
+	padding-bottom: 60px;
+}
 
 /*media*/
 @media screen and (max-width: 1200px) {
