--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -12,7 +12,7 @@
 .pagination {padding:60px 0; left: 0;text-align: center;width: 100%;}
 .banner .swiper-pagination-switch {display: inline-block; *display: inline;zoom:1; width: 30px;height: 4px;border-radius: 2px;background: rgba(0,0,0,.9);margin: 0 3px;cursor: pointer;}
 .banner .swiper-active-switch {background: #096735;}
-.banner .container{position: absolute; top:50%; left: 0; transform:translate(0,-50%);}
+.banner .container{position: absolute; top:50%; left: 0; -webkit-transform:translate(0,-50%);transform:translate(0,-50%);}
 .swiper-slide .container{padding: 0 17%;width: 100%; float: left;}
 .swiper-slide .maxtite_ban{color:#fff;width: 40%;float:left;}
 .swiper-slide .maxtite_ban p{padding:18px 0 30px; font-size: 1rem;}
@@ -28,12 +28,12 @@
     float: left;
 }*/
 
-.maxlatest .sign-content{position:  absolute; top:50%; z-index: 9; right:10%; padding:30px; width:25%; max-width: 400px; min-width: 330px; transform: translate(0,-50%); }
+.maxlatest .sign-content{position:  absolute; top:50%; z-index: 9; right:10%; padding:30px; width:25%; max-width: 400px; min-width: 330px; -webkit-transform: translate(0,-50%);transform: translate(0,-50%); }
 .maxlatest .sign-content .text-section{margin-bottom: 16px;}
 .maxlatest .sign-content .btn-set{margin-top: 20px;}
 .maxlatest .sign-content input[type="text"],.maxlatest .sign-content input[type="password"],.maxlatest .sign-content .btn{height: 40px; line-height: 40px; padding:0;}
 
-.maxlatest .bansearch{position: absolute; top:50%; left: 11%; z-index: 3; width: 40%; max-width: 450px; color: #fff; transform: translate(0,-50%);}
+.maxlatest .bansearch{position: absolute; top:50%; left: 11%; z-index: 3; width: 32%; max-width: 690px; color: #fff; -webkit-transform: translate(0,-50%); transform: translate(0,-50%);}
 .maxlatest .bansearch form{position: relative;  margin: 20px 0;}
 .maxlatest .bansearch .maxicon-search{background-position: 0 -218px; position: absolute; top:0; right: 0; height: 50px; width: 50px;}
 .maxlatest .bansearch p{font-size: 42px; text-transform: uppercase; font-weight: bold; line-height: 1.0em;}
@@ -49,7 +49,7 @@
 .maxfactory .maxitem1{margin-left:0;}
 .maxfactory .maxitem1{}
 .maxfactory li img{width: 30%;}
-.maxfactory li p{display:-webkit-box; position: absolute; top:50%; right:20px; width:calc(70% - 20px) ; transform:translate(0,-50%); padding-left:20px; line-height: 1em; font-size: 1.4rem; color:#fff; overflow:hidden;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2; }
+.maxfactory li p{display:-webkit-box; position: absolute; top:50%; right:20px; width:calc(70% - 20px) ;-webkit-transform:translate(0,-50%); transform:translate(0,-50%); padding-left:20px; line-height: 1em; font-size: 1.4rem; color:#fff; overflow:hidden;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2; }
 
 .maxmean li{display: table-cell;  color: #fff; width:20%;  font-size: 0; margin-left: 1.5%; vertical-align: top; }
 .maxmean li a{display: block; margin-right:5%; position: relative; line-height: 1em;}
@@ -181,6 +181,7 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
     }
     .maxlatest .bansearch{
         left: 12%;
+        width: 36%
     }
 }
 
@@ -198,7 +199,7 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
         padding-left: 13%;
    }
    .maxlatest .bansearch{
-        width:30%
+        width:37%
     }
 
 }
@@ -236,7 +237,10 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
     }
     .maxlatest .bansearch{
         left: 13%;
-        width:28%
+        width:40%
+    }
+    #loginForm label{
+        font-size: 12px;
     }
     
 
@@ -267,6 +271,9 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
     .maxtop .maxmenu li a{
         font-size: .8rem;
     }
+    .maxlatest .bansearch{
+      max-width: 37%;
+   }
     
     
 }
@@ -352,7 +359,7 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
         padding-left: 10%;
    }
    .maxlatest .bansearch{
-      max-width: 400px;
+      max-width: 38%;
    }
 }
 
@@ -429,6 +436,9 @@ a,button , .maxtop .maxmenu li a{
 .col-md-6 label{
     font-weight: normal;
     color:#333
+}
+#loginForm label{
+    text-transform: initial
 }
 .col-md-6 .form-group .btn{
     margin-top: 40px;
